# Monitoring_Git

./: .env.example  .gitignore  ClickHouse_Integration.md  Dockerfile  README.md  pyproject.toml  workspace.yaml
.dlt/: secrets.toml
github_deps_tracker/: github_client.py  orchestration.py  pyproject.toml  workspace.yaml
github_deps_tracker/.dlt/: secrets.toml
github_deps_tracker/.tmp_dagster_home_rvjhcwnj/history/: runs.db
github_deps_tracker/.tmp_dagster_home_rvjhcwnj/history/runs/: .db  ba5fd274-ee3d-400a-b22d-ee758542b058.db  index.db
github_deps_tracker/.tmp_dagster_home_rvjhcwnj/schedules/: schedules.db
github_deps_tracker/.tmp_dagster_home_rvjhcwnj/storage/ba5fd274-ee3d-400a-b22d-ee758542b058/compute_logs/: sejazxlj.err  sejazxlj.out
github_deps_tracker/cli/: main.py
github_deps_tracker/dbt_project/: profiles.yml
github_deps_tracker/dbt_project/models/gold/: dim_dependency.sql  dim_repository.sql  fact_vulnerability_scan.sql
github_deps_tracker/output/: jawah_charset_normalizer.json  kjd_idna.json  mwaskom_seaborn.json  pypa_wheel.json  pytest-dev_pytest-cov.json  pytest-dev_pytest-mock.json
src/: definitions.py  main.py
src/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
src/dbt_project/models/: sources.yml
src/dbt_project/models/gold/: dim_advisory.sql  dim_date.sql  dim_dependency.sql  dim_repository.sql  fact_vulnerability_scan.sql
src/extract_dependencies/: dependency_fetcher.py  github_client.py  main_extract_dependencies.py  pyproject.toml
src/github_deps_tracker/: config.py  dependency_fetcher.py  orchestration.py  pyproject.toml
src/github_deps_tracker/output/: Romain-Data_projet_meteo.json  certifi_python-certifi.json  gitpython-developers_GitPython.json  gorakhargosh_watchdog.json  kevin1024_pytest-httpbin.json  matplotlib_matplotlib.json  psf_requests.json  pylint-dev_pylint.json  pytest-dev_pytest.json  python-trio_trustme.json  vega_altair.json
src/landing_page/: README.md  backend.py  index.html  package-lock.json  package.json
src/landing_page/scratch/: make_transparent.py
src/landing_page/src/: App.tsx  styles.css
src/load_dependencies/: main_load_postgres.py
src/vulnerability/: check_token.py  inspect_schema.py  orchestration.py  request_v.py  test_minio.py
